# saml_service_provider

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  readme.md
apps/service_provider/: apps.py  saml.py  urls.py  views.py
sample_sp/: asgi.py  saml.py  settings.py  urls.py  views.py  wsgi.py
